<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout

    android:layout_width="match_parent"
    android:background="@color/colorBackgroundGrey"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/Avatar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/WhiteName"
        android:layout_marginLeft="10dp"
        android:layout_alignBottom="@+id/Avatar"
        android:layout_marginBottom="10dp"

        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Favorite"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/Avatar"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="-30dp"
        android:clickable="true"
        android:src="@drawable/ic_star_white"
        app:backgroundTint="@color/colorPrimaryWhite"
        android:focusable="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="-5dp"
        android:layout_below="@+id/Avatar"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/Layout1"
        android:background="@color/colorPrimaryWhite"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:paddingLeft="10dp"
        android:layout_marginVertical="5dp"
        android:layout_marginTop="20dp"
        android:id="@+id/Name"
         />

    <TextView
        android:layout_width="fill_parent"
        android:layout_below="@+id/Name"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_location__24dp"
        android:layout_marginTop="10dp"
        android:id="@+id/Adresse"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/Adresse"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_email_24dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/Mail"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_below="@+id/Mail"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:id="@+id/Phone"
        android:inputType="phone" />

    ></RelativeLayout>


    <TextView
        android:id="@+id/DescriptionTitle"
        android:background="@color/colorPrimaryWhite"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/Layout1"
        android:breakStrategy="balanced"
        android:fitsSystemWindows="true"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:singleLine="false" />


    <TextView
        android:id="@+id/Description"
        android:background="@color/colorPrimaryWhite"
        android:layout_width="fill_parent"
        android:layout_below="@+id/DescriptionTitle"
        android:layout_height="110dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-12dp"
        android:layout_marginBottom="10dp"
        android:breakStrategy="balanced"
        android:fitsSystemWindows="true"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:singleLine="false" />


</RelativeLayout>
</ScrollView>



